# portalAnalytics

./: .gitignore  README.md  cleaning.ipynb  eda.ipynb  pyproject.toml  snowflake-connection.ipynb  textcleaning.py
data/: file-formats.csv  valid_values_assay.csv
model/: README.md  base-model.ipynb  dataset-creation.ipynb  evaluate.py  training.py  tree.html  utils.py
notebooks/: cleaning.ipynb  dataset-creation.ipynb  eda.ipynb  snowflake-connection.ipynb
scripts/: data-cleanup.py  dataset-creation.py  ontologyScraper.py  pythong_build_dataset.py  snowflake-data-collection.py  textcleaning.py
templates/: .env-template
